Add CredentialDescription get impl.
Bug: 260629338
CTS-Coverage-Bug: 265212839
API-Coverage-Bug: 265212839
Test: Local Build & Deployment
Change-Id: I44b4fba89cee00b51455d3ddf8696477b98045e6